fadel el delete

--- a/src/main/resources/com/example/emirates/Admin.fxml
+++ b/src/main/resources/com/example/emirates/Admin.fxml
@@ -24,7 +24,7 @@
                       <!-- Options Section -->
                       <VBox alignment="CENTER" spacing="15" styleClass="dashboard-options">
                           <Button fx:id="addflightbtn" onAction="#handleAddFlightPage" styleClass="admin-button" text="Add Flight" />
-                          <Button onAction="#handleUpdateFlight" styleClass="admin-button" text="Update Flight" />
+                          <Button fx:id="updateBtn" onAction="#handleUpdateFlight" styleClass="admin-button" text="Update Flight" />
                           <Button onAction="#handleDeleteFlight" styleClass="admin-button" text="Delete Flight" />
                       </VBox>
       
